<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="0dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        app:srcCompat="@mipmap/logo_foreground"
        android:contentDescription="@string/logo_jogos" />

    <TextView
        android:id="@+id/titleLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cadastre_se"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/infoLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/subtitulo_cadastro"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblEmailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtEmailUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/email_format"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#4C4C4C"
        android:textSize="14sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblSenhaUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/senha"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtSenhaUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/senha"
        android:inputType="text|textPassword"
        android:textColor="#fff"
        android:textColorHint="#4C4C4C"
        android:textSize="14sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblConfirmarSenhaUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/confirmar_senha"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtConfirmarSenhaUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="top|left"
        android:hint="@string/confirmar_senha"
        android:inputType="text|textPassword"
        android:textColor="#fff"
        android:textColorHint="#4C4C4C"
        android:textSize="14sp"
        android:autofillHints=""
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/errorLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FF2525"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sucessLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text=""
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnSaveUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/cadastrar"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />
</LinearLayout>